@@ -399,191 +399,8 @@ namespace Astroid {
       }
     }
 
-    if (version < 1) {
-      /* check accounts for save_draft */
-      ptree apt = config.get_child ("accounts");
-
-      for (auto &kv : apt) {
-        try {
-
-          ustring sto = kv.second.get<string> ("save_drafts_to");
-
-        } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-          LOG (warn) << "config: setting default save draft path for account: " << kv.first << ", please update!";
-          ustring key = ustring::compose ("accounts.%1.save_drafts_to", kv.first);
-          config.put (key.c_str (), "/home/root/Mail/drafts/");
-
-        }
-      }
-
-      changed = true;
-    }
-
-    if (version < 2) {
-      /* check accounts additional_sent_tags */
-      ptree apt = config.get_child ("accounts");
-
-      for (auto &kv : apt) {
-        try {
-
-          ustring sto = kv.second.get<string> ("additional_sent_tags");
-
-        } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-          ustring key = ustring::compose ("accounts.%1.additional_sent_tags", kv.first);
-          config.put (key.c_str (), "");
-        }
-      }
-
-      changed = true;
-    }
-
-    if (version < 3) {
-      LOG (warn) << "config: 'astroid.notmuch.sent_tags' have been moved to 'mail.sent_tags'";
-
-      config.put ("mail.sent_tags", config.get<string>("astroid.notmuch.sent_tags"));
-      config.erase ("astroid.notmuch.sent_tags");
-
-      changed = true;
-
-      LOG (warn) << "config: astroid now reads standard notmuch options from notmuch config, it is configured through: 'astroid.notmuch_config' and is now set to the default: ~/.notmuch-config. please validate!";
-    }
-
-    if (version < 10) {
-      /* check accounts signature */
-      ptree apt = config.get_child ("accounts");
-
-      for (auto &kv : apt) {
-        if (version < 5) {
-          try {
-
-            ustring sto = kv.second.get<string> ("signature_file");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.signature_file", kv.first);
-            config.put (key.c_str (), "");
-          }
-
-          try {
-
-            ustring sto = kv.second.get<string> ("signature_default_on");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.signature_default_on", kv.first);
-            config.put (key.c_str (), true);
-          }
-
-          try {
-
-            ustring sto = kv.second.get<string> ("signature_attach");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.signature_attach", kv.first);
-            config.put (key.c_str (), false);
-          }
-        }
-
-        if (version < 6) {
-          try {
-
-            ustring sto = kv.second.get<string> ("always_gpg_sign");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.always_gpg_sign", kv.first);
-            config.put (key.c_str (), false);
-          }
-        }
-
-        if (version < 8) {
-          try {
-
-            ustring ss = kv.second.get<string> ("signature_separate");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.signature_separate", kv.first);
-            config.put (key.c_str (), false);
-          }
-        }
-
-        if (version < 9) {
-          try {
-
-            ustring ss = kv.second.get<string> ("select_query");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.select_query", kv.first);
-            config.put (key.c_str (), "");
-          }
-        }
-
-        if (version < 10) {
-          try {
-
-            ustring sto = kv.second.get<string> ("signature_file_markdown");
-
-          } catch (const boost::property_tree::ptree_bad_path &ex) {
-
-            ustring key = ustring::compose ("accounts.%1.signature_file_markdown", kv.first);
-            config.put (key.c_str (), "");
-          }
-        }
-      }
-
-      changed = true;
-    }
-
-    /* check deprecated keys (as of version 3) */
-    try {
-      config.get<string> ("astroid.notmuch.db");
-
-      LOG (error) << "config: option 'astroid.notmuch.db' is deprecated, it is read from notmuch config.";
-    } catch (const boost::property_tree::ptree_bad_path &ex) { }
-
-
-    try {
-      config.get<string> ("astroid.notmuch.excluded_tags");
-      LOG (error) << "config: option 'astroid.notmuch.excluded_tags' is deprecated, it is read from notmuch config.";
-    } catch (const boost::property_tree::ptree_bad_path &ex) { }
-
-    try {
-      config.get<string> ("astroid.notmuch.sent_tags");
-      LOG (error) << "config: option 'astroid.notmuch.sent_tags' is deprecated, it is moved to 'mail.sent_tags'.";
-    } catch (const boost::property_tree::ptree_bad_path &ex) { }
-
-    /* generalized editor */
-    if (version < 4) {
-      try {
-        string gvim = config.get<string> ("editor.gvim.cmd");
-        string args = config.get<string> ("editor.gvim.args");
-
-        string new_gvim = gvim + " -geom 10x10 --servername %2 --socketid %3 " + args + " %1";
-
-
-        LOG (warn) << "config: editor has been generalized, editor.cmd replaces gvim.cmd and gvim.args.";
-
-        config.put<string> ("editor.cmd", new_gvim);
-
-        changed = true;
-      } catch (const boost::property_tree::ptree_bad_path &ex) { }
-    }
-
-    try {
-      string gvim = config.get<string> ("editor.gvim.cmd");
-      string args = config.get<string> ("editor.gvim.args");
-
-      LOG (warn) << "editor.gvim.cmd and editor.gvim.args are replaced by editor.cmd, and may be removed.";
-    } catch (const boost::property_tree::ptree_bad_path &ex) { }
-
     if (version < CONFIG_VERSION) {
-      config.put ("astroid.config.version", CONFIG_VERSION);
-      changed = true;
+      LOG (error) << "cf: the config file is an old version (" << version << "), the current version is: " << CONFIG_VERSION;
     }
 
     if (changed) {
