@@ -5,7 +5,7 @@
   We have now finally moved to WebKit2. This is a big change since the previous
   functionality had to be moved to a WebExtension running in a separate process.
 
-  The IPC with the extension is implemented using Google ProtoBufs (>= 3.0) 
+  The IPC with the extension is implemented using Google ProtoBufs (>= 3.0)
   and Unix Domain Sockets.
 
   WebKit2 is actively maintained and consequently a long list of CVEs in the
@@ -45,6 +45,10 @@ Misc:
 * The configuration file is no longer written back by default if missing values
   are found. This also means that values undefined by the user will be updated
   if the default is changed.
+
+  Various checks for merging older versions of the configuration file to the
+  current version has been removed. The parser is more resilient and the old
+  versions are old.
 
 == v0.12
 * `mail.close_on_success` configures if page closes on successful send.
